src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:19:22
   |
LL |     fn bar(&self) -> Self::Bar {
   |                      ^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r> Fn<(&'r X,)>`
              found type `Fn<(&X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:21:9
   |
LL |         |x| x
   |         ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
